fragment pour les retours détails/liste des événements

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -39,8 +39,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/essaim/liste'}" th:text="#{essaim}"></a>
-					<th:block th:text="' '+${essaim.nom}"></th:block>
+					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
+					<th:block th:text="' / '+${essaim.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
