--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -8,8 +8,7 @@
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		const Personnes = /*[[#{Personnes}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
-			const idTbl = '#personnes';
-			new DataTable(idTbl, {
+			new DataTable('#personnes', {
 				dom: 'Blftip',
 				scrollX: true,
 				buttons: [
