--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -64,8 +64,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/rucher/liste'}" th:text="#{rucher}"></a>
-					<th:block th:text="' '+${rucher.nom}"></th:block>
+					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
+					<th:block th:text="' / '+${rucher.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
