--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -54,8 +54,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/rucheType/liste'}" th:text="#{rucheType}"></a>
-					<th:block th:text="' ' + ${rucheType.nom}"></th:block>
+					<a th:href="@{'/rucheType/liste'}" th:text="#{rucheTypes}"></a>
+					<th:block th:text="' / ' + ${rucheType.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
