--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener('click', event => {
@@ -22,42 +23,21 @@
 	<br />
 	<div class="container-fluid">
 		<div class="row">
+			<div th:replace="~{include::evedettitre}"></div>
 			<div class="col">
-				<h1 class="item">
-					<a th:if="${type}==''" th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a> <a
-						th:if="${type}=='ruche'" th:href="@{'/evenement/ruche/'+${evenement.ruche.id}}"
-						th:text="#{evenement}"></a> <a th:if="${type}=='rucher'"
-						th:href="@{'/evenement/rucher/'+${evenement.rucher.id}}" th:text="#{evenement}"></a> <a
-						th:if="${type}=='essaim'" th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
-						th:text="#{evenement}"></a>
-					<th:block th:if="${type=='hausse'}">
-						<a th:if="${evenement.hausse != null}" th:href="@{'/evenement/hausse/'+${evenement.hausse.id}}"
-							th:text="#{evenement}"></a>
-						<a th:if="${evenement.hausse == null}" th:href="@{'/hausse/liste'}" th:text="#{evenement}"></a>
-					</th:block>
-					<a th:if="${type=='sucre'}" th:href="@{'/evenement/essaim/listeSucre'}"
-						th:text="#{evenementssucre}"></a> <a th:if="${type=='traitement'}"
-						th:href="@{'/evenement/essaim/listeTraitement'}" th:text="#{evenementstraitement}"></a> <a
-						th:if="${type=='poids'}" th:href="@{'/evenement/ruche/listePoidsRuche'}"
-						th:text="#{evenementspoidsruche}"></a> <a th:if="${type=='cadre'}"
-						th:href="@{'/evenement/ruche/listeCadreRuche'}" th:text="#{evenementcadreruche}"></a> <a
-						th:if="${type=='remplissage'}" th:href="@{'/evenement/hausse/listeRemplissageHausse'}"
-						th:text="#{evenementremplissagehausse}"></a> <a th:if="${type=='ajoutruche'}"
-						th:href="@{'/evenement/rucher/listeRucheAjout'}" th:text="#{evenementsrucheajout}"></a>
-					<th:block th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
-				</h1>
-			</div>
-			<div class="col">
-				<a th:href="@{'/evenement/modifie/'+${evenement.id}}"> <span class="bi-pencil" th:title="#{modifier}"
-						aria-hidden="true"></span>
-				</a> <a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span class="bi-trash"
-						style="color: red" th:title="#{supprimer}" aria-hidden="true"></span>
+				<a th:href="@{'/evenement/modifie/'+${evenement.id}}"> <span
+					class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
+				</a> <a id="supprime"
+					th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
+					class="bi-trash" style="color: red" th:title="#{supprimer}"
+					aria-hidden="true"></span>
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive" id="detailEvenement">
-		<table class="table table-sm table-bordered table-striped" id="evenements">
+		<table class="table table-sm table-bordered table-striped"
+			id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
@@ -72,10 +52,14 @@
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}" th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}" th:text="${evenement.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}" th:text="${evenement.rucher?.nom}"></a></td>
-					<td><a th:href="@{'/hausse/'+${evenement.hausse?.id}}" th:text="${evenement.hausse?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
+						th:text="${evenement.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
+						th:text="${evenement.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
+						th:text="${evenement.rucher?.nom}"></a></td>
+					<td><a th:href="@{'/hausse/'+${evenement.hausse?.id}}"
+						th:text="${evenement.hausse?.nom}"></a></td>
 					<td class="num" th:text="${evenement.valeur}"></td>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
