--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -1,28 +1,29 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
-	<script th:inline="javascript">
-		/* exported
-		_csrf_token	_csrf_param_name haussenoms recolteHausses haussesupp supphausseeve
-		supphausse nomhaussesv nomexistentdeja  evenements  urlclone  hausseid  hausses  creer
- 		*/
-		const _csrf_token = /*[[${_csrf.token}]]*/ null;
-		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
-		const haussenoms = /*[[${haussenoms}]]*/ null;
-		const recolteHausses = /*[[${recolteHausses}]]*/ null;
-		const haussesupp = /*[[#{haussenonsupprimeerefrecolte}]]*/ null;
-		const supphausseeve = /*[[#{supprimerhausseevenement}]]*/ null;
-		const supphausse = /*[[#{supprimerhausse}]]*/ null;
-		const nomhaussesv = /*[[#{nomhaussesvirgule}]]*/ null;
-		const nomexistentdeja = /*[[#{nomexistentdeja}]]*/ null;
-		const evenements = /*[[${evenements}]]*/ null;
-		const urlclone = /*[[@{/hausse/clone/}]]*/ null;
-		const hausseid = /*[[${hausse.id}]]*/ null;
-		const hausses = /*[[#{Hausses}]]*/ null;
-		const creer = /*[[#{creer}]]*/ null;
-	</script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
+<script th:inline="javascript">
+	/* exported
+	_csrf_token, _csrf_param_name, haussenoms, recolteHausses, haussesupp, supphausseeve,
+	supphausse, nomhaussesv, nomexistentdeja, evenements, urlclone, hausseid, hausses, creer
+	 */
+	const _csrf_token = /*[[${_csrf.token}]]*/null;
+	const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
+	const haussenoms = /*[[${haussenoms}]]*/null;
+	const recolteHausses = /*[[${recolteHausses}]]*/null;
+	const haussesupp = /*[[#{haussenonsupprimeerefrecolte}]]*/null;
+	const supphausseeve = /*[[#{supprimerhausseevenement}]]*/null;
+	const supphausse = /*[[#{supprimerhausse}]]*/null;
+	const nomhaussesv = /*[[#{nomhaussesvirgule}]]*/null;
+	const nomexistentdeja = /*[[#{nomexistentdeja}]]*/null;
+	const evenements = /*[[${evenements}]]*/null;
+	const urlclone = /*[[@{/hausse/clone/}]]*/null;
+	const hausseid = /*[[${hausse.id}]]*/null;
+	const hausses = /*[[#{Hausses}]]*/null;
+	const creer = /*[[#{creer}]]*/null;
+</script>
 </head>
 
 <body>
@@ -34,21 +35,26 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/hausse/liste'}" th:text="#{hausse}"></a>
-					<th:block th:text="' '+${hausse.nom}"></th:block>
+					<a th:href="@{'/hausse/liste'}" th:text="#{Hausses}"></a>
+					<th:block th:text="' / '+${hausse.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/hausse/modifie/'+${hausse.id}}" class="bi-pencil" th:title="#{modifier}"
-					aria-hidden="true"></a> &nbsp; <span id="clone" class="bi-collection cursorpointer"
-					th:title="#{cloner}" aria-hidden="true"> </span> <a id="supprime"
-					th:href="@{'/hausse/supprime/'+${hausse.id}}" class="bi-trash" style="color: red"
-					th:title="#{supprimer}" aria-hidden="true"></a>&nbsp; <a
-					th:href="@{'/evenement/hausse/'+${hausse.id}}" class="padicons bi-list-ul" th:title="#{evenements}"
-					aria-hidden="true"></a> <a th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
-					class="bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a> <a
-					th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}" class="bi-square-half"
-					th:title="#{evenementRemplissage}" aria-hidden="true"></a>
+				<a th:href="@{'/hausse/modifie/'+${hausse.id}}" class="bi-pencil"
+					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <span
+					id="clone" class="bi-collection cursorpointer" th:title="#{cloner}"
+					aria-hidden="true"> </span> <a id="supprime"
+					th:href="@{'/hausse/supprime/'+${hausse.id}}" class="bi-trash"
+					style="color: red" th:title="#{supprimer}" aria-hidden="true"></a>&nbsp;
+				<a th:href="@{'/evenement/hausse/'+${hausse.id}}"
+					class="padicons bi-list-ul" th:title="#{evenements}"
+					aria-hidden="true"></a> <a
+					th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
+					class="bi-chat-text" th:title="#{evenementCommentaire}"
+					aria-hidden="true"></a> <a
+					th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}"
+					class="bi-square-half" th:title="#{evenementRemplissage}"
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -68,7 +74,8 @@
 				<tr>
 					<td th:text="${hausse.active}? #{oui} : #{non}"></td>
 					<td th:text="${hausse.dateAcquisition}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(hausse.poidsVide,1,2,'DEFAULT')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(hausse.poidsVide,1,2,'DEFAULT')}"></td>
 					<td class="num" th:text="${hausse.nbCadres}"></td>
 					<td class="num" th:text="${hausse.nbCadresMax}"></td>
 					<td th:text="${hausse.commentaire}"></td>
@@ -76,7 +83,7 @@
 			</tbody>
 		</table>
 		<h6 th:unless="${hausse.ruche}" th:text="#{haussePasRuche}"></h6>
-		<table class="table table-sm table-bordered" 
+		<table class="table table-sm table-bordered"
 			th:if="${(hausse.ruche != null) or (eveHausse != null) or (eveRucher != null) or (eveRuche != null)}">
 			<thead>
 				<tr>
@@ -91,26 +98,30 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a th:href="@{'/ruche/'+${hausse.ruche?.id}}" th:text="${hausse.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${hausse.ruche?.id}}"
+						th:text="${hausse.ruche?.nom}"></a></td>
 					<td th:text="${hausse.ordreSurRuche}"></td>
-					<td><a th:if="${eveHausse != null}" th:href="@{'/evenement/'+${eveHausse?.id}+'?type=hausse'}"
-							th:text="${#temporals.format(eveHausse?.date, 'yyyy/MM/dd')}"></a>
+					<td><a th:if="${eveHausse != null}"
+						th:href="@{'/evenement/'+${eveHausse?.id}+'?type=hausse'}"
+						th:text="${#temporals.format(eveHausse?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 					<td><a th:href="@{'/rucher/'+${hausse.ruche?.rucher?.id}}"
-							th:text="${hausse.ruche?.rucher?.nom}"></a></td>
-					<td><a th:if="${eveRucher != null}" th:href="@{'/evenement/'+${eveRucher?.id}+'?type=hausse'}"
-							th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
+						th:text="${hausse.ruche?.rucher?.nom}"></a></td>
+					<td><a th:if="${eveRucher != null}"
+						th:href="@{'/evenement/'+${eveRucher?.id}+'?type=hausse'}"
+						th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 					<td><a th:href="@{'/essaim/'+${hausse.ruche?.essaim?.id}}"
-							th:text="${hausse.ruche?.essaim?.nom}"></a></td>
-					<td><a th:if="${eveRuche != null}" th:href="@{'/evenement/'+${eveRuche?.id}+'?type=hausse'}"
-							th:text="${#temporals.format(eveRuche?.date, 'yyyy/MM/dd')}"></a>
+						th:text="${hausse.ruche?.essaim?.nom}"></a></td>
+					<td><a th:if="${eveRuche != null}"
+						th:href="@{'/evenement/'+${eveRuche?.id}+'?type=hausse'}"
+						th:text="${#temporals.format(eveRuche?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 				</tr>
 			</tbody>
 		</table>
-		
-		
+
+
 		<th:block th:if="${(eveRempl != null) or (eveComm != null)}">
 			<h6 th:text="#{derniersEve}"></h6>
 			<table class="table table-sm table-bordered">
@@ -126,13 +137,15 @@
 				<tbody>
 					<tr>
 						<td class="num" th:text="${eveRempl?.valeur}"></td>
-						<td><a th:if="${eveRempl != null}" th:href="@{'/evenement/'+${eveRempl?.id}+'?type=hausse'}"
-								th:text="${#temporals.format(eveRempl?.date, 'yyyy/MM/dd')}"></a>
+						<td><a th:if="${eveRempl != null}"
+							th:href="@{'/evenement/'+${eveRempl?.id}+'?type=hausse'}"
+							th:text="${#temporals.format(eveRempl?.date, 'yyyy/MM/dd')}"></a>
 						</td>
 						<td th:text="${eveRempl?.commentaire}"></td>
 						<td th:text="${eveComm?.commentaire}"></td>
-						<td><a th:if="${eveComm != null}" th:href="@{'/evenement/'+${eveComm?.id}+'?type=hausse'}"
-								th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
+						<td><a th:if="${eveComm != null}"
+							th:href="@{'/evenement/'+${eveComm?.id}+'?type=hausse'}"
+							th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
 						</td>
 					</tr>
 				</tbody>
