--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -2,21 +2,24 @@
 <html xmlns:th="https://www.thymeleaf.org">
 
 <head th:fragment="common_header(scripts,styles,links)">
-	<title th:text="#{Ruches}"></title>
-	<meta charset="UTF-8" />
-	<link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
-	<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/ruches-1.css}" />
-	<link rel="stylesheet" type="text/css" media="all" th:href="@{/js/datatables-1.13.8/datatables.min.css}" />
-	<link rel="stylesheet" type="text/css" media="all"
-		th:href="@{/images/bootstrap-icons-1.11.1/bootstrap-icons.min.css}" />
-	<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
-	<script th:src="@{/js/jquery.validate.min-1.20.0.js}"></script>
-	<script th:src="@{/js/bootstrap-5.3.2/bootstrap.bundle.min.js}"></script>
-	<link rel="stylesheet" type="text/css" media="all" th:href="@{/js/bootstrap-5.3.2/bootstrap.min.css}" />
-	<script th:src="@{/js/datatables-1.13.8/datatables.min.js}"></script>
-	<script th:inline="javascript">
+<title th:text="#{Ruches}"></title>
+<meta charset="UTF-8" />
+<link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/css/ruches-1.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/js/datatables-1.13.8/datatables.min.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/images/bootstrap-icons-1.11.1/bootstrap-icons.min.css}" />
+<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+<script th:src="@{/js/jquery.validate.min-1.20.0.js}"></script>
+<script th:src="@{/js/bootstrap-5.3.2/bootstrap.bundle.min.js}"></script>
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/js/bootstrap-5.3.2/bootstrap.min.css}" />
+<script th:src="@{/js/datatables-1.13.8/datatables.min.js}"></script>
+<script th:inline="javascript">
 		function updateTheme() {
 			document.querySelector('html').setAttribute('data-bs-theme',
 				window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light')
@@ -46,51 +49,63 @@
 			pageLength: parseInt(datatPageLength),
 		});
 	</script>
-	<th:block th:replace="${scripts} ?: ~{}" />
-	<th:block th:replace="${styles} ?: ~{}" />
-	<th:block th:replace="${links} ?: ~{}" />
+<th:block th:replace="${scripts} ?: ~{}" />
+<th:block th:replace="${styles} ?: ~{}" />
+<th:block th:replace="${links} ?: ~{}" />
 </head>
 
 <script th:fragment="jsruches"
 	th:src="@{'/js/ruches-28/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
 	</script>
-<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-28/' + ${nom} + '.js'}"></script>
+<script th:fragment="jsruchesnom(nom)"
+	th:src="@{'/js/ruches-28/' + ${nom} + '.js'}"></script>
 
 <script th:fragment="d3" th:src="@{/js/d3.min-7.8.4.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
-<script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
-<script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
+<script th:fragment="d3-interpolate"
+	th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
+<script th:fragment="d3-scale-chromatic"
+	th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
 
 <script th:fragment="jsol" th:src="@{/js/ol-6.15.1/ol.js}"></script>
-<link th:fragment="cssol" rel="stylesheet" type="text/css" media="all" th:href="@{/js/ol-6.15.1/ol.css}" />
+<link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
+	th:href="@{/js/ol-6.15.1/ol.css}" />
 
 <!--/* th:data-key="${@environment.getProperty('ign.data.key')}" */-->
 <!--/* th:attr="data-url=@{/js/autoconf.js}" */-->
 
-<script th:fragment="jsGpPluginOpenLayers" th:attr="data-url=@{/js/autoconf.js}"
+<script th:fragment="jsGpPluginOpenLayers"
+	th:attr="data-url=@{/js/autoconf.js}"
 	th:src="@{/js/GpPluginOpenLayers-3.2.22/GpPluginOpenLayers.js}"></script>
 
-<script th:fragment="jsGpOsmPluginOpenLayers" th:src="@{/js/GpPluginOpenLayers-3.2.22/GpPluginOpenLayers.js}"></script>
-<link th:fragment="cssGpPluginOpenLayers" rel="stylesheet" type="text/css" media="all"
+<script th:fragment="jsGpOsmPluginOpenLayers"
+	th:src="@{/js/GpPluginOpenLayers-3.2.22/GpPluginOpenLayers.js}"></script>
+<link th:fragment="cssGpPluginOpenLayers" rel="stylesheet"
+	type="text/css" media="all"
 	th:href="@{/js/GpPluginOpenLayers-3.2.22/GpPluginOpenLayers.css}" />
 
-<script defer th:fragment="dom-to-image" th:src="@{/js/dom-to-image-more.min-3.2.0.js}"></script>
+<script defer th:fragment="dom-to-image"
+	th:src="@{/js/dom-to-image-more.min-3.2.0.js}"></script>
 
 <script defer th:fragment="jspdf" th:src="@{/js/jspdf-2.5.1.umd.min.js}"></script>
 
 <script th:fragment="jsChart" th:src="@{/js/chart.umd.min-4.4.1.js}"></script>
 
 <script th:fragment="luxon" th:src="@{/js/luxon.min-3.4.4.js}"></script>
-<script th:fragment="chartjs-adapter" th:src="@{/js/chartjs-adapter-luxon-1.3.1.js}"></script>
+<script th:fragment="chartjs-adapter"
+	th:src="@{/js/chartjs-adapter-luxon-1.3.1.js}"></script>
 
-<link th:fragment="weather-icons" rel="stylesheet" type="text/css" media="all"
+<link th:fragment="weather-icons" rel="stylesheet" type="text/css"
+	media="all"
 	th:href="@{/css/weather-icons-2.0.12/css/weather-icons.min.css}" />
-<link th:fragment="weather-icons-wind" rel="stylesheet" type="text/css" media="all"
+<link th:fragment="weather-icons-wind" rel="stylesheet" type="text/css"
+	media="all"
 	th:href="@{/css/weather-icons-2.0.12/css/weather-icons-wind.min.css}" />
 
-<script th:fragment="jsdatetimepicker" defer th:src="@{/js/jquery.datetimepicker.full.min-2.5.21.js}"></script>
-<link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}" />
+<script th:fragment="jsdatetimepicker" defer
+	th:src="@{/js/jquery.datetimepicker.full.min-2.5.21.js}"></script>
+<link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css"
+	media="all" th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}" />
 <script th:fragment="localejsdatetimepicker">
 	document.addEventListener('DOMContentLoaded', () => {
 		$('#date').datetimepicker();
@@ -100,14 +115,55 @@
 
 <script th:fragment="jquerydaterangepicker" defer
 	th:src="@{/js/jquery-date-range-picker-0.21.1/jquery.daterangepicker.min.js}"></script>
-<link th:fragment="cssjquerydaterangepicker" rel="stylesheet" type="text/css" media="all"
+<link th:fragment="cssjquerydaterangepicker" rel="stylesheet"
+	type="text/css" media="all"
 	th:href="@{/js/jquery-date-range-picker-0.21.1/daterangepicker.min.css}" />
 <script th:fragment="moment" defer th:src="@{/js/moment-min-2.29.4.js}"></script>
 
 <body>
+	<div th:fragment="evedettitre" class="col">
+		<h1 class="item">
+			<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
+				th:text="#{evenements}"></a> 
+			<a th:if="${type}=='hausse'"
+				th:href="@{'/evenement/hausse/'+${evenement.hausse.id}}"
+				th:text="#{evenements}"></a> 
+			<a th:if="${type}=='essaim'"
+				th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
+				th:text="#{evenements}"></a> 
+			<a th:if="${type}=='ruche'"
+				th:href="@{'/evenement/ruche/'+${evenement.ruche.id}}"
+				th:text="#{evenements}"></a>
+			<a th:if="${type}=='rucher'"
+				th:href="@{'/evenement/rucher/'+${evenement.rucher.id}}"
+				th:text="#{evenements}"></a>
+			 <a th:if="${type=='sucre'}"
+				th:href="@{'/evenement/essaim/listeSucre'}"
+				th:text="#{evenementssucre}"></a>
+			<a th:if="${type=='traitement'}"
+				th:href="@{'/evenement/essaim/listeTraitement/false'}"
+				th:text="#{evenementstraitement}"></a>
+			<a th:if="${type=='poids'}"
+				th:href="@{'/evenement/ruche/listePoidsRuche'}"
+				th:text="#{evenementspoidsruche}"></a>
+			<a th:if="${type=='cadre'}"
+				th:href="@{'/evenement/ruche/listeCadreRuche'}"
+				th:text="#{evenementcadreruche}"></a>
+			<a th:if="${type=='remplissage'}"
+				th:href="@{'/evenement/hausse/listeRemplissageHausse'}"
+				th:text="#{evenementremplissagehausse}"></a>
+			<a th:if="${type=='ajoutruche'}"
+				th:href="@{'/evenement/rucher/listeRucheAjout'}"
+				th:text="#{evenementsrucheajout}"></a>
+			<th:block
+				th:text="' / '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+		</h1>
+	</div>
 	<footer th:fragment="footer">
-		<p th:utext="${'&#128029; ' + @environment.getProperty('accueil.titre') + ' &#128029; '}"></p>
-		<a target="_blank" href="https://gitlab.com/ruches/ruches" th:text="'Ruches ' + ${buildTime}"></a>
+		<p
+			th:utext="${'&#128029; ' + @environment.getProperty('accueil.titre') + ' &#128029; '}"></p>
+		<a target="_blank" href="https://gitlab.com/ruches/ruches"
+			th:text="'Ruches ' + ${buildTime}"></a>
 	</footer>
 </body>
 
