--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -44,8 +44,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/personne/liste'}" th:text="#{personne}"></a>
-					<th:block th:text="' '+${personne.prenom}+' '+${personne.nom}"></th:block>
+					<a th:href="@{'/personne/liste'}" th:text="#{Personnes}"></a>
+					<th:block th:text="' / '+${personne.prenom}+' '+${personne.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
