formulaires de base retour avec sep

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -40,7 +40,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
-					<th:block th:text="' / '+${essaim.nom}"></th:block>
+					<th:block th:text="#{sep}+${essaim.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
