--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -45,7 +45,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/personne/liste'}" th:text="#{Personnes}"></a>
-					<th:block th:text="' / '+${personne.prenom}+' '+${personne.nom}"></th:block>
+					<th:block th:text="#{sep}+${personne.prenom}+' '+${personne.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
