--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -36,7 +36,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/ruche/liste'}" th:text="#{Ruches}"></a>
-					<th:block th:text="' / '+${ruche.nom}"></th:block>
+					<th:block th:text="#{sep}+${ruche.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
