--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -65,7 +65,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
-					<th:block th:text="' / '+${rucher.nom}"></th:block>
+					<th:block th:text="#{sep}+${rucher.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
