--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -66,12 +66,12 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item" th:unless="${essaim.id}">
-					<th:block th:text="#{ajouterUn} + ' '"></th:block>
-					<a th:href="@{'/essaim/liste'}" th:text="#{essaim}"></a>
+					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
+					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${essaim.id}">
-					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/essaim/'+${essaim.id}}" th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
+					<th:block th:text="#{sep} + #{modification}"></th:block>
 				</h1>
 			</div>
 		</div>
