--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -36,7 +36,7 @@
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/hausse/liste'}" th:text="#{Hausses}"></a>
-					<th:block th:text="' / '+${hausse.nom}"></th:block>
+					<th:block th:text="#{sep}+${hausse.nom}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
