--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -65,12 +65,12 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item" th:unless="${hausse.id}">
-					<th:block th:text="#{ajouterUne} + ' '"></th:block>
 					<a th:href="@{'/hausse/liste'}" th:text="#{hausse}"></a>
+					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${hausse.id}">
-					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/hausse/'+${hausse.id}}" th:text="#{hausse} + ' ' + ${hausse.nom}"></a>
+					<th:block th:text="#{sep} + #{modification}"></th:block>
 				</h1>
 			</div>
 		</div>
