--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -36,7 +36,7 @@
 				<h1 class="item">
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
 					<th:block
-						th:text="' / '+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+						th:text="#{sep}+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
