--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -61,7 +61,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item" th:unless="${personne.id}">
-					<a th:href="@{'/personne/liste'}" th:text="#{personne}"></a>
+					<a th:href="@{'/personne/liste'}" th:text="#{Personnes}"></a>
 					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${personne.id}">
