--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -49,7 +49,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item" th:unless="${ruche.id}">
-					<a th:href="@{'/ruche/liste'}" th:text="#{ruche}"></a>
+					<a th:href="@{'/ruche/liste'}" th:text="#{Ruches}"></a>
 					<th:block th:text="#{sep} + #{Ajout}"></th:block>
 				</h1>
 				<h1 class="item" th:if="${ruche.id}">
